amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/override-directive-extension-object.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/override-directive-extension-object.api.graphql
Profile: GraphQL
Conforms: true
Number of results: 0
